--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,8 +1,7 @@
 !!!
 %html
   %head
-    %title
-      Learning in Streaming | #{yield(:title)}
+    %title= full_title(yield(:title))
     = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
