--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,9 +1,29 @@
 !!!
 %html
   %head
+    %meta{charset: "utf-8"}/
+    %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}/
     %title= full_title(yield(:title))
-    = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
-    = javascript_include_tag "application", "data-turbolinks-track" => true
+    = stylesheet_link_tag "application"
+    = javascript_include_tag "vendor/modernizr"
     = csrf_meta_tags
   %body
+    
+    %nav.top-bar{"data-topbar" => ""}
+      %ul.title-area
+        %li.name
+          %h1
+            %a{href: "#"} Monrails
+        / Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone
+        %li.toggle-topbar.menu-icon
+          %a{href: "#"}
+            %span Menu
+      %section.top-bar-section
+        %ul.right
+          %li
+            %a{href: "#"} Sign in
+        
     = yield
+
+
+    = javascript_include_tag "application"
