--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,21 +9,10 @@
     = csrf_meta_tags
   %body
     
-    %nav.top-bar{"data-topbar" => ""}
-      %ul.title-area
-        %li.name
-          %h1
-            %a{href: "#"} Monrails
-        / Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone
-        %li.toggle-topbar.menu-icon
-          %a{href: "#"}
-            %span Menu
-      %section.top-bar-section
-        %ul.right
-          %li
-            %a{href: "#"} Sign in
-        
+    = render 'layouts/header'
+
     = yield
 
-
     = javascript_include_tag "application"
+
+    = render 'layouts/footer'
