--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -11,3 +11,4 @@
       %li= link_to "About Us", about_path
       %li= link_to "Contact", contact_path
       %li= link_to "Sign in", "#"
+      %li= link_to "Sign up", signup_path
