--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -8,7 +8,7 @@
         %span Menu
   %section.top-bar-section
     %ul.right
-      %li= link_to "About Us", about_path
+      %li= link_to "About", about_path
       %li= link_to "Contact", contact_path
       %li= link_to "Sign in", "#"
       %li= link_to "Sign up", signup_path
