Refactor _footer.haml

--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -1,2 +1,6 @@
-%footer 
-	%p by alevellop
+%footer.small-12.large-12
+	%p.small-12.large-12
+	%p.small-12.large-2.large-offset-5 
+		= link_to "Monrails", "https://github.com/alevellop/monrails" 
+		by
+		= link_to "alevellop", " http://es.linkedin.com/in/alejandrovelazquezlopez/es"
