--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -3,15 +3,10 @@
 
 footer{
 	position:fixed;
-	background-color: #5da423;
+	background-color: #e9e9e9;
 	bottom: 0;
-	width: 100%;
-	height: 3em;
 
 	p{
-		width: 100%;
-		height: 99%;
-		margin-top: 1%;
 		text-align: center;
 	}
 }
