Fix issue dropdown from topbar

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -4,7 +4,8 @@
     %meta{charset: "utf-8"}/
     %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}/
     %title= full_title(yield(:title))
-    = stylesheet_link_tag "application"
+    = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
+    = javascript_include_tag "application", "data-turbolinks-track" => true
     = javascript_include_tag "vendor/modernizr"
     = csrf_meta_tags
   %body
@@ -18,7 +19,5 @@
           = link_to "x", "#", class: "close"
 
     = yield
-
-    = javascript_include_tag "application"
 
     = render 'layouts/footer'
