--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -1,9 +1,13 @@
 %footer.small-12.large-12
-	%p.small-12.large-12
-	%p.small-12.large-2.large-offset-5 
-		= link_to "Monrails", "https://github.com/alevellop/monrails" 
-		by
-		= link_to "alevellop", " http://es.linkedin.com/in/alejandrovelazquezlopez/es"
+	.row
+		%p.small-12.large-12.column
+		%p.small-12.large-3.large-offset-4.column
+			= link_to "Monrails", "https://github.com/alevellop/monrails" 
+			by
+			= link_to "alevellop", " http://es.linkedin.com/in/alejandrovelazquezlopez/es"
+
+		%p.small-6.large-1.large-offset-3.column= link_to "About", about_path
+		%p.small-6.large-1.column= link_to "Contact", contact_path
 	
 	/ Show code in development
 	.row
