--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -8,7 +8,5 @@
         %span Menu
   %section.top-bar-section
     %ul.right
-      %li= link_to "About", about_path
-      %li= link_to "Contact", contact_path
-      %li= link_to "Sign in", "#"
+      %li.active= link_to "Sign in", "#"
       %li= link_to "Sign up", signup_path
