--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -8,7 +8,15 @@
         %span Menu
   %section.top-bar-section
     %ul.right
-      %li= link_to "About", about_path
-      %li= link_to "Contact", contact_path
-      %li= link_to "Sign in", "#"
-      %li= link_to "Sign up", signup_path
+      %li= link_to "Home", root_path
+      
+      - if signed_in?
+        %li= link_to "Users", "#"
+        %li= link_to "Profile", current_user
+        %li= link_to "Settings", "#"
+        %li.divider
+        %li= link_to "Sign out", signout_path, method: "delete"
+
+      - else
+        %li.active= link_to "Sign in", signin_path
+        %li= link_to "Sign up", signup_path
