--- a/app/views/static_pages/contact.haml
+++ b/app/views/static_pages/contact.haml
@@ -1,6 +1,5 @@
 - provide(:title, 'Contact')
 
-%h1 Contact
-%p
-  Contact Monrails about the website at the
-  \#{link_to "contact page", "#"}.
+.row
+	%h1.small-12.large-6.large-offset-3 Contact
+	%p.small-12.large-6.large-offset-3 Contact Monrails about the website at the #{link_to "contact page", "#"}.
