Finish User edit, update, index and destroy actions. Also add Admin role.

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -18,6 +18,7 @@
           = value
           = link_to "x", "#", class: "close"
 
-    = yield
+    .row
+      .small-10.small-offset-1= yield
 
     = render 'layouts/footer'
