--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -11,9 +11,9 @@
       %li= link_to "Home", root_path
       
       - if signed_in?
-        %li= link_to "Users", "#"
+        %li= link_to "Users", users_path
         %li= link_to "Profile", current_user
-        %li= link_to "Settings", "#"
+        %li= link_to "Settings", edit_user_path(current_user)
         %li.divider
         %li= link_to "Sign out", signout_path, method: "delete"
 
