--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -11,7 +11,10 @@
       %li= link_to "Home", root_path
       
       - if signed_in?
-        %li= link_to "Users", users_path
+
+        - if admin_user?
+          %li= link_to "Users", users_path
+          
         %li= link_to "Profile", current_user
         %li= link_to "Settings", edit_user_path(current_user)
         %li.divider
