--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -1,7 +1,7 @@
 %footer.small-12.large-12
 	.row
 		%p.small-12.large-12.column
-		%p.small-12.large-3.large-offset-4.column.text-right
+		%p.small-12.large-3.large-offset-4.column
 			= link_to "Monrails", "https://github.com/alevellop/monrails" 
 			by
 			= link_to "alevellop", " http://es.linkedin.com/in/alejandrovelazquezlopez/es"
