Add Course: create, destroy, preview in  user-profile.

--- a/app/views/static_pages/home.haml
+++ b/app/views/static_pages/home.haml
@@ -1,4 +1,6 @@
 - provide(:title, 'Monrails')
 
-.row
-	%h1.small-12.large-6.large-offset-3 Monrails
+
+%h1.small-12.large-4.large-offset-4 Welcome to Monrails
+.small-11.large-12
+	= render 'shared/newest_courses'
