--- a/app/views/users/_user.haml
+++ b/app/views/users/_user.haml
@@ -1,4 +1,4 @@
-%li.small-12.large-12.columns
+%li.small-12.large-12.column
 
 	- if current_user.admin? && !current_user?(user)
 		= link_to user.name, user 
