--- a/app/views/users/edit.haml
+++ b/app/views/users/edit.haml
@@ -1,17 +1,16 @@
 - provide(:title, "Edit user")
-.row
-	%h1.small-12.large-6.large-offset-3 Update your profile
 
-.row
-	.small-12.large-7.large-offset-2
-		= form_for(@user) do |f|
-			= render 'shared/error_messages'
-			= f.label :name
-			= f.text_field :name
-			= f.label :email
-			= f.text_field :email
-			= f.label :password
-			= f.password_field :password
-			= f.label :password_confirmation, "Confirm Password"
-			= f.password_field :password_confirmation
-			= f.submit "Save changes", class: "button small"
+%h2.small-11.large-6.large-offset-4 Update your profile
+
+.small-11.large-7.large-offset-2
+	= form_for(@user) do |f|
+		= render 'shared/error_messages', object: f.object
+		= f.label :name
+		= f.text_field :name
+		= f.label :email
+		= f.text_field :email
+		= f.label :password
+		= f.password_field :password
+		= f.label :password_confirmation, "Confirm Password"
+		= f.password_field :password_confirmation
+		= f.submit "Save changes", class: "button small"
