--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -18,7 +18,6 @@
           = value
           = link_to "x", "#", class: "close"
 
-    .row
-      .small-10.small-offset-1= yield
+    .small-11.small-offset-1.large-12.large-offset-0= yield 
 
     = render 'layouts/footer'
