--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -1,3 +1,16 @@
 = provide(:title, @user.name)
-.row
-	%h1.small-12.large-6.large-offset-2 #{@user.name}
+
+
+/ block for user's attributes-----------------------------
+
+%h2.small-11.large-5.large-offset-1.column #{@user.name}
+
+/ block for courses---------------------------------------
+-if @user.author_of.any?
+
+	.small-12.large-6.column
+		%h2.small-12 Courses Created(#{@user.author_of.count})
+		.small-12= foundation_paginate @courses
+		%ul.no-bullet.small-12
+			= render @courses
+		.small-12.large-12 Do you want to create a Course? #{link_to "Create Course", new_course_path, class: "button tiny"}
