Add user register in course

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -18,6 +18,6 @@
           = value
           = link_to "x", "#", class: "close"
 
-    .small-11.small-offset-1.large-12.large-offset-0= yield 
+    .small-12.large-12= yield 
 
     = render 'layouts/footer'
