--- a/app/views/static_pages/contact.haml
+++ b/app/views/static_pages/contact.haml
@@ -1,4 +1,4 @@
 - provide(:title, 'Contact')
 
-%h2.small-11.large-6.large-offset-5 Contact
+%h1.small-11.large-12.text-center Contact
 %p.small-11.large-7.large-offset-2 Contact Monrails about the website at the #{link_to "contact page", "#"}.
