--- a/app/views/static_pages/home.haml
+++ b/app/views/static_pages/home.haml
@@ -1,6 +1,7 @@
 - provide(:title, 'Monrails')
 
 
-%h1.small-12.large-4.large-offset-4 Welcome to Monrails
-.small-11.large-12
-	= render 'shared/newest_courses'
+%h1.small-11.large-12.text-center Welcome to Monrails
+.small-12.large-12
+	%h2.small-12.large-12.text-center.subheader Newest Courses
+	= render 'static_pages/newest_courses'
