--- a/app/views/courses/_course.haml
+++ b/app/views/courses/_course.haml
@@ -1,8 +1,8 @@
 - if current_user?(course.author)
 	%li.small-12.large-12
-		= course. title
-		#{link_to "delete", course, method: "delete", data: { confirm: "Are you sure?"}}
+		= link_to course.title, course_path(course)
+		| #{link_to "delete", course, method: "delete", data: { confirm: "Are you sure?"}}
 
 - else
 
-	%li= course.title
+	%li= link_to course.title, course_path(course)
