--- a/app/views/courses/show.haml
+++ b/app/views/courses/show.haml
@@ -4,13 +4,21 @@
 
 /--------------------------------Course info.
 .small-12.large-12
-	.line-bottom.row.small-12.large-12
-		%h3.small-12.large-10.column
+	.line-bottom.row.small-11.large-12
+		%h3.small-12.large-10
 			.small-4.large-2.column Author
-			%strong.small-8.large-10.column= @course.author.name	
+			%strong.small-8.large-8= @course.author.name
+		- if !signed_in?
+			= link_to "Sign in to register", signin_path, class: "small-6 large-2 large-offset-10 column button small"
+		- else
+			- if !author?(@course)
+				-if @profile
+					= render 'shared/unregister'
+				-else
+					= render 'shared/register'
 			
 
-	.line-bottom.row.small-12.large-12
+	.line-bottom.row.small-11.large-12
 		%h4.small-12.large-12.column Description
 		%p.small-12.large-12.column= @course.description
 
@@ -18,4 +26,5 @@
 		%p.small-12.large-12
 		%h4.small-7.large-5.column User's Comments
 		.small-12.large-2.column
-			%a.button Comment
+			- if signed_in? && !author?(@course)
+				%a.button Comment
