Add 'popular courses' render in static_page/home

--- a/app/views/static_pages/home.haml
+++ b/app/views/static_pages/home.haml
@@ -5,3 +5,7 @@
 .small-12.large-12
 	%h2.small-12.large-12.text-center.subheader Newest Courses
 	= render 'static_pages/newest_courses'
+
+.small-12.large-12
+	%h2.small-12.large-12.text-center.subheader Popular Courses
+	= render 'static_pages/popular_courses'
