--- a/app/views/static_pages/_newest_courses.haml
+++ b/app/views/static_pages/_newest_courses.haml
@@ -1,9 +1,4 @@
 - @courses = newest_courses
 - @courses.each do |course|
 	
-	.small-12.large-3.column
-		%ul.pricing-table.small-12.large-12
-			%li.title= course.title
-			%li.description.text-left= course.description
-			%li.bullet-item users
-			%li.cta-button= link_to "View", course, class: "button tiny"
+	= render partial: 'generate_course', locals: {course: course}
