Add Course#index, refactor newest_courses and popular_courses.

--- a/app/views/static_pages/home.haml
+++ b/app/views/static_pages/home.haml
@@ -4,8 +4,8 @@
 %h1.small-11.large-12.text-center Welcome to Monrails
 .small-12.large-12
 	%h2.small-12.large-12.text-center.subheader Newest Courses
-	= render 'static_pages/newest_courses'
+	= render 'courses/newest_courses'
 
 .small-12.large-12
 	%h2.small-12.large-12.text-center.subheader Popular Courses
-	= render 'static_pages/popular_courses'
+	= render 'courses/popular_courses'
