--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -9,6 +9,7 @@
   %section.top-bar-section
     %ul.right
       %li= link_to "Home", root_path
+      %li= link_to "Courses", courses_path
       %li= link_to "About", about_path
       %li= link_to "Contact", contact_path
       
