--- a/app/views/users/_fields.haml
+++ b/app/views/users/_fields.haml
@@ -1,4 +1,6 @@
-= render 'shared/error_messages', object: f.object		
+= render 'shared/error_messages', object: f.object
+= f.label :image
+= f.file_field :image
 = f.label :name
 = f.text_field :name
 = f.label :email
