--- a/app/views/users/edit.haml
+++ b/app/views/users/edit.haml
@@ -4,13 +4,5 @@
 
 .small-10.small-offset-1.large-7.large-offset-2
 	= form_for(@user) do |f|
-		= render 'shared/error_messages', object: f.object
-		= f.label :name
-		= f.text_field :name
-		= f.label :email
-		= f.text_field :email
-		= f.label :password
-		= f.password_field :password
-		= f.label :password_confirmation, "Confirm Password"
-		= f.password_field :password_confirmation
+		= render 'fields', f:f
 		= f.submit "Save changes", class: "button small"
