--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -5,7 +5,9 @@
 
 .small-11.large-5.large-offset-1.column
 	%h2.small-12.large-12= @user.name
-	.small-12.large-12= image_tag @user.image.url(:square)
+
+	- if @user.image?
+		.small-12.large-12= image_tag @user.image.url(:square)
 
 
 / block for courses---------------------------------------
