--- a/app/views/users/new.haml
+++ b/app/views/users/new.haml
@@ -3,7 +3,7 @@
 %h2.small-12.large-12.text-center Sign up
 
 .small-10.small-offset-1.large-4.large-offset-4
-	= form_for(@user) do |f|
+	= form_for(@user, multipart: true ) do |f|
 		= render 'fields', f:f
 		= f.submit "Create my account", class: "button small"
 
