--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -7,7 +7,7 @@
 	%h2.small-12.large-12= @user.name
 
 	- if @user.image?
-		.small-12.large-12= image_tag @user.image.url(:square)
+		.small-12.large-12= image_tag @user.image.url(:small)
 
 
 / block for courses---------------------------------------
