Fix the gem paperclip's integration

--- a/app/views/users/_fields.haml
+++ b/app/views/users/_fields.haml
@@ -1,6 +1,6 @@
 = render 'shared/error_messages', object: f.object
-= f.label :image
-= f.file_field :image
+= f.label :photo
+= f.file_field :photo
 = f.label :name
 = f.text_field :name
 = f.label :email
