--- a/app/views/courses/_fields.haml
+++ b/app/views/courses/_fields.haml
@@ -1,5 +1,5 @@
 = render 'shared/error_messages', object: f.object		
 = f.label :title
-= f.text_field :title, placeholder: "Have 100 words to write a title..." 
+= f.text_field :title, placeholder: "Have 100 characters to write a title..." 
 = f.label :description
-= f.text_area :description, placeholder: "Have 300 words to write a description..."
+= f.text_area :description, placeholder: "Have 1.000 characters to write a description..."
