--- a/app/views/courses/_video_fields.haml
+++ b/app/views/courses/_video_fields.haml
@@ -1,5 +1,8 @@
-%h4.line-bottom Videos
-%br
 = f.fields_for :videos do |v|
-	= v.label :title
-	= v.text_field :title, placeholder: "Have 100 words to write a title..." 
+	%section
+		= v.label :title
+		= v.text_field :title, placeholder: "Have 100 characters to write a title..."
+		= v.label :file
+		= v.file_field :file
+		
+		%p.line-bottom.small-12.large-12.column
