--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -9,7 +9,7 @@
   %section.top-bar-section
     %ul.right
       %li= link_to "Home", root_path
-      %li= link_to "Courses", courses_path
+      %li.active= link_to "Courses", courses_path
       %li= link_to "About", about_path
       %li= link_to "Contact", contact_path
       
@@ -18,7 +18,7 @@
         - if admin_user?
           %li= link_to "Users", users_path
           
-        %li= link_to "Profile", current_user
+        %li.active= link_to "Profile", current_user
         %li= link_to "Settings", edit_user_path(current_user)
         %li.divider
         %li= link_to "Sign out", signout_path, method: "delete"
