--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -6,7 +6,7 @@
 .small-11.large-5.large-offset-1.column
 	%h2.small-12.large-12= @user.name
 
-	.small-12.large-6.text-center= image_tag @user.photo.url(:small)
+	.small-12.large-6.text-center= image_tag @user.photo.url, size: "150x150"
 
 
 / block for courses---------------------------------------
