Fix create course and video streaming.

--- a/app/views/courses/_video_fields.haml
+++ b/app/views/courses/_video_fields.haml
@@ -2,7 +2,7 @@
 	%section
 		= v.label :title
 		= v.text_field :title, placeholder: "Have 100 characters to write a title..."
-		= v.label :file
-		= v.file_field :file
+		= v.label :picture
+		= v.file_field :picture
 		
 		%p.line-bottom.small-12.large-12.column
