--- a/app/views/courses/show.haml
+++ b/app/views/courses/show.haml
@@ -17,15 +17,32 @@
 				-else
 					= render 'profiles/register'			
 
-	.line-bottom.row.small-11.large-12
+	.row.line-bottom.small-11.large-12
 		%h3.small-12.large-12.column Description
 		%p.small-12.large-12.column= @course.description
 
-	.row.small-11.large-12
+	.row.line-bottom.small-11.large-12
 		%h3.small-12.large-12.column= pluralize(@videos.count, 'Video')
 		- @videos.each do |video|
 			- if !signed_in? || (!author?(@course) && !registered?(@course))
 				%p.small-12.large-12.column= video.title
 			- else
 				%p.small-12.large-12.column= link_to video.title, [@course, video]
-				
+	
+	.row.small-11.large-12
+		%h3.small-12.large-12.column Comments
+
+		- if signed_in? && registered?(@course)
+			.small-12.large-12.column
+				=  form_for [@course, @comment] do |f|
+					.small-12.large-10.column= render 'comments/fields', f:f
+					.small-12.large-2.column= f.submit "add comment", class: "button small"
+		
+		- comments = example_comments(@course)
+		- if !comments.nil?
+			.small-12.large-12.column
+				- comments.each do |c|
+					- if !c.body.nil?
+						= render 'comments/comment', c:c
+						
+		
