--- a/app/views/courses/show.haml
+++ b/app/views/courses/show.haml
@@ -18,29 +18,31 @@
 					= render 'profiles/register'			
 
 	.row.line-bottom.small-11.large-12
-		%h3.small-12.large-12.column Description
-		%p.small-12.large-12.column= @course.description
+		%h3.small-12.large-12 Description
+		%p.small-12.large-12= @course.description
 
 	.row.line-bottom.small-11.large-12
-		%h3.small-12.large-12.column= pluralize(@videos.count, 'Video')
+		%h3.small-12.large-12= pluralize(@videos.count, 'Video')
 		- @videos.each do |video|
-			- if !signed_in? || (!author?(@course) && !registered?(@course))
-				%p.small-12.large-12.column= video.title
+			- if signed_in? && (author?(@course) || registered?(@course))
+				.small-12.large-12= link_to video.title, [@course, video]
+				%p
 			- else
-				%p.small-12.large-12.column= link_to video.title, [@course, video]
-	
+				%p.small-12.large-12= video.title
+				%p
+			
 	.row.small-11.large-12
-		%h3.small-12.large-12.column Comments
+		%h3.small-12.large-12 Comments
 
 		- if signed_in? && registered?(@course)
-			.small-12.large-12.column
+			.small-12.large-12
 				=  form_for [@course, @comment] do |f|
 					.small-12.large-10.column= render 'comments/fields', f:f
 					.small-12.large-2.column= f.submit "add comment", class: "button small"
 		
 		- comments = example_comments(@course)
 		- if !comments.nil?
-			.small-12.large-12.column
+			.small-12.large-12
 				- comments.each do |c|
 					- if !c.body.nil?
 						= render 'comments/comment', c:c
