--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -16,12 +16,13 @@
       - if signed_in?
 
         - if admin_user?
-          %li= link_to "Users", users_path
+          %li.active= link_to "Users", users_path
+          %li.divider
           
         %li.active= link_to "Profile", current_user
         %li= link_to "Settings", edit_user_path(current_user)
         %li.divider
-        %li= link_to "Sign out", signout_path, method: "delete"
+        %li= link_to "Sign out", signout_path, method: "delete", data: {confirm: "Are you sure?"}
 
       - else
         %li.active= link_to "Sign in", signin_path
