--- a/app/views/courses/_popular_courses.haml
+++ b/app/views/courses/_popular_courses.haml
@@ -1,4 +1,4 @@
 - @courses = popular_courses
 - @courses.each do |course|
 	
-	= render partial: 'courses/generate_course', locals: {course: course}
+	= render partial: 'courses/generate_course', locals: {c: course}
