--- a/app/views/courses/_fields.haml
+++ b/app/views/courses/_fields.haml
@@ -3,3 +3,5 @@
 = f.text_field :title, placeholder: "Have 100 characters to write a title..." 
 = f.label :description
 = f.text_area :description, placeholder: "Have 1.000 characters to write a description..."
+= f.label :photo
+= f.file_field :photo
