--- a/app/views/courses/show.haml
+++ b/app/views/courses/show.haml
@@ -5,9 +5,9 @@
 /--------------------------------Course info.
 .small-12.large-12
 	.line-bottom.row.small-11.large-12
-		%h3.small-12.large-10
-			.small-4.large-2.column Author
-			%strong.small-8.large-8= @course.author.name
+		%h3.small-12.large-10.column
+			.small-12.large-2.column Author
+			%strong.small-12.large-8= @course.author.name
 		- if !signed_in?
 			= link_to "Sign in to register", signin_path, class: "small-6 large-2 large-offset-10 column button small"
 		- else
